Modified the navbar for mobile devices

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			        <ul id="custom_ul">
 			            <li><a href="#">home</a></li>
 			            <li><a href="#about">about</a></li>
-			            <li><a href="#portfolio">portfolio</a></li>
+			            <li><a href="#portfolio">projects</a></li>
 			            <li><a href="#contact">contact</a></li>
 			            <li><a href="https://ph.linkedin.com/in/joshua-nuestro-54b910112" target="_blank"><img src="./images/linkedin.png"></a></li>
 			        </ul>
@@ -39,13 +39,13 @@
 				<h4>I am a web developer based in the Philippines.</h4>
 				<p>I love learning new things. Facing new challenges is what keeps me going.</p>
 				<p>Here is the link to my <strong><em><a href="#contact">resume</a></em></strong>.
-				<p>Allow me to solve the <strong>[coding]</strong> puzzles for you.</p>
+				<p>Allow me to solve the <span class="typewriter">coding</span> puzzles for you.</p>
 			</div>
 		<!-- End of About -->
 
 		<!-- Portfolio -->
 			<div class="container-fluid d-flex justify-content-center align-items-center flex-column" id="portfolio">
-				<h2 class="text-center mb-3 row mx-auto">My portfolio</h2>
+				<h2 class="text-center mb-3 row mx-auto">Projects</h2>
 				<div class="m-2 p-2">
 						<a href="https://gitlab.com/joshnuestro-zuitt-projects/b127" target="_blank"><img class="img-fluid" src="./images/html5.png" width="300"/></a>
 				</div>
@@ -62,20 +62,20 @@
 			<h2 class="text-center mb-3 row mx-auto">Contact</h2>
 	        <div class="row">
 	            <div class="col-12 col-md-6 mx-auto">
-<!-- 	                    <form>
+	                    <form>
 	                            <div class="form-group col-12">
 	                                <input type="text" class="form-control" placeholder="Full Name" required>
 	                            </div>
 	                            <div class="form-group col-12">
-	                                <input type="email" class="form-control" placeholder="Email (e.g. example@email.com)" required>
+	                                <input type="email" class="form-control" placeholder="Email" required>
 	                            </div>
 	                            <div class="form-group col-12">
 	                                <textarea class="form-control" id="txt-textarea" rows="3" placeholder="Message (say '&ldquo;Hi&rdquo;)" required></textarea>
 	                            </div>
 	                            <button type="submit" class="btn btn-secondary">Send</button>
-	                    </form> -->
-	                    <h4>Whether you are interested in working in a project together or just want to say Hi!, send me an email at <em><strong>joshuanuestro@gmail.com</strong></em></h4>
-	                    <h4>You can also check out my LinkedIn page in the navbar to reach me.</h4>
+	                    </form>
+	                    <!-- <h4>Whether you are interested in working in a project together or just want to say Hi!, send me an email at <em><strong>joshuanuestro@gmail.com</strong></em></h4>
+	                    <h4>You can also check out my LinkedIn page in the navbar to reach me.</h4> -->
 	            </div>
 	        </div>
 	    </div>
